copy from mdrv_bl

--- a/cam_bl/cam_bl.ioc
+++ b/cam_bl/cam_bl.ioc
@@ -69,11 +69,11 @@ PB9.GPIO_Label=CD_RST
 PB9.Locked=true
 PB9.Signal=GPIO_Output
 PD1.GPIOParameters=GPIO_Label
-PD1.GPIO_Label=RGB_G
+PD1.GPIO_Label=LED_G
 PD1.Locked=true
 PD1.Signal=GPIO_Output
 PD2.GPIOParameters=GPIO_Label
-PD2.GPIO_Label=RGB_R
+PD2.GPIO_Label=LED_R
 PD2.Locked=true
 PD2.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
