the spi tx-dma interrupt priority should be higher than rx dma

--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -28,7 +28,7 @@ Dma.SPI1_TX.1.Mode=DMA_NORMAL
 Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.1.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI1_TX.1.RequestNumber=1
 Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.SPI1_TX.1.SignalID=NONE
@@ -70,7 +70,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
 MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
-NVIC.DMA1_Channel1_IRQn=true\:1\:0\:true\:false\:true\:false\:true
+NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:false\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 NVIC.EXTI2_3_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -124,8 +124,9 @@ PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=LED_R
 PD2.Locked=true
 PD2.Signal=GPIO_Output
-PD3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PD3.GPIO_Label=CD_INT
+PD3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PD3.GPIO_PuPd=GPIO_PULLUP
 PD3.Locked=true
 PD3.Signal=GPXTI3
