--- a/cam_bl/cam_bl.ioc
+++ b/cam_bl/cam_bl.ioc
@@ -13,9 +13,8 @@ Mcu.Name=STM32G071C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA13
 Mcu.Pin1=PA14-BOOT0
-Mcu.Pin10=VP_SYS_V_VREFBUF
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_SYS_VS_DBSignals
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_SYS_VS_DBSignals
 Mcu.Pin2=PA15
 Mcu.Pin3=PD1
 Mcu.Pin4=PD2
@@ -24,7 +23,7 @@ Mcu.Pin6=PB4
 Mcu.Pin7=PB5
 Mcu.Pin8=PB6
 Mcu.Pin9=PB9
-Mcu.PinsNb=13
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
@@ -115,11 +114,11 @@ RCC.EXTERNAL_CLOCK_VALUE=48000
 RCC.FCLKCortexFreq_Value=64000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=64000000
-RCC.HSE_VALUE=8000000
+RCC.HSE_VALUE=12000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=64000000
 RCC.I2S1Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CECFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2S1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,RCC_MCODiv,SYSCLKFreq_VALUE,SYSCLKSource,TIM15Freq_Value,TIM1Freq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CECFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2S1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PWRFreq_Value,RCC_MCODiv,SYSCLKFreq_VALUE,SYSCLKSource,TIM15Freq_Value,TIM1Freq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LPTIM1Freq_Value=64000000
 RCC.LPTIM2Freq_Value=64000000
 RCC.LPUART1Freq_Value=64000000
@@ -127,8 +126,10 @@ RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.PLLPoutputFreq_Value=64000000
-RCC.PLLQoutputFreq_Value=64000000
+RCC.PLLN=16
+RCC.PLLPoutputFreq_Value=128000000
+RCC.PLLQoutputFreq_Value=128000000
+RCC.PLLR=RCC_PLLR_DIV4
 RCC.PLLRCLKFreq_Value=64000000
 RCC.PWRFreq_Value=64000000
 RCC.RCC_MCODiv=RCC_MCODIV_4
@@ -139,7 +140,7 @@ RCC.TIM1Freq_Value=64000000
 RCC.USART1Freq_Value=64000000
 RCC.USART2Freq_Value=64000000
 RCC.VCOInputFreq_Value=16000000
-RCC.VCOOutputFreq_Value=128000000
+RCC.VCOOutputFreq_Value=256000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -153,6 +154,4 @@ VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_SYS_V_VREFBUF.Mode=ExternalMode
-VP_SYS_V_VREFBUF.Signal=SYS_V_VREFBUF
 board=custom
