--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -1,7 +1,25 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.DMA_GENERATOR0.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DMA_GENERATOR0.2.EventEnable=DISABLE
+Dma.DMA_GENERATOR0.2.Instance=DMA1_Channel3
+Dma.DMA_GENERATOR0.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.DMA_GENERATOR0.2.MemInc=DMA_MINC_ENABLE
+Dma.DMA_GENERATOR0.2.Mode=DMA_NORMAL
+Dma.DMA_GENERATOR0.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.DMA_GENERATOR0.2.PeriphInc=DMA_PINC_DISABLE
+Dma.DMA_GENERATOR0.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.DMA_GENERATOR0.2.Priority=DMA_PRIORITY_HIGH
+Dma.DMA_GENERATOR0.2.RequestNumber=1
+Dma.DMA_GENERATOR0.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.DMA_GENERATOR0.2.SignalID=HAL_DMAMUX1_REQ_GEN_EXTI0
+Dma.DMA_GENERATOR0.2.SyncEnable=DISABLE
+Dma.DMA_GENERATOR0.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.DMA_GENERATOR0.2.SyncRequestNumber=1
+Dma.DMA_GENERATOR0.2.SyncSignalID=NONE
 Dma.Request0=SPI1_RX
 Dma.Request1=SPI1_TX
-Dma.RequestsNb=2
+Dma.Request2=DMA_GENERATOR0
+Dma.RequestsNb=3
 Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.0.EventEnable=DISABLE
 Dma.SPI1_RX.0.Instance=DMA1_Channel1
@@ -38,39 +56,59 @@ Dma.SPI1_TX.1.SyncRequestNumber=1
 Dma.SPI1_TX.1.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C2.I2C_Fall_Time=0
+I2C2.I2C_Rise_Time=1000
+I2C2.IPParameters=Timing,I2C_Rise_Time,Speed,I2C_Fall_Time
+I2C2.Speed=100
+I2C2.Timing=0x40F0323D
 KeepUserPlacement=false
 Mcu.Family=STM32G0
 Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP1=I2C2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32G071C(6-8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PA9
-Mcu.Pin1=PA13
-Mcu.Pin10=PB6
-Mcu.Pin11=PB9
-Mcu.Pin12=VP_SYS_V_VREFBUF
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_SYS_VS_DBSignals
-Mcu.Pin2=PA14-BOOT0
-Mcu.Pin3=PA15
-Mcu.Pin4=PD1
-Mcu.Pin5=PD2
-Mcu.Pin6=PD3
-Mcu.Pin7=PB3
-Mcu.Pin8=PB4
-Mcu.Pin9=PB5
-Mcu.PinsNb=15
+Mcu.Pin0=PA0
+Mcu.Pin1=PA1
+Mcu.Pin10=PB2
+Mcu.Pin11=PB10
+Mcu.Pin12=PB11
+Mcu.Pin13=PA9
+Mcu.Pin14=PC6
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14-BOOT0
+Mcu.Pin17=PA15
+Mcu.Pin18=PD1
+Mcu.Pin19=PD2
+Mcu.Pin2=PA2
+Mcu.Pin20=PD3
+Mcu.Pin21=PB3
+Mcu.Pin22=PB4
+Mcu.Pin23=PB5
+Mcu.Pin24=PB6
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_SYS_VS_DBSignals
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
 MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
-NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:false\:true
+NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel1_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 NVIC.EXTI2_3_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -79,6 +117,10 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+PA0.Locked=true
+PA0.Signal=GPIO_Input
+PA1.Locked=true
+PA1.Signal=GPIO_Input
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14-BOOT0.Mode=Serial_Wire
@@ -89,11 +131,37 @@ PA15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA15.Locked=true
 PA15.PinState=GPIO_PIN_SET
 PA15.Signal=GPIO_Output
+PA2.Locked=true
+PA2.Signal=GPIO_Input
+PA3.Locked=true
+PA3.Signal=GPIO_Input
+PA4.Locked=true
+PA4.Signal=GPIO_Input
+PA5.Locked=true
+PA5.Signal=GPIO_Input
+PA6.Locked=true
+PA6.Signal=GPIO_Input
+PA7.Locked=true
+PA7.Signal=GPIO_Input
 PA9.GPIOParameters=GPIO_Speed
 PA9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA9.Locked=true
 PA9.Mode=Clock-out
 PA9.Signal=RCC_MCO
+PB0.Locked=true
+PB0.Signal=GPXTI0
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=CAM_HREF
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB11.Mode=I2C
+PB11.Signal=I2C2_SDA
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=CAM_VSYNC
+PB2.Locked=true
+PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Speed
 PB3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB3.Locked=true
@@ -116,6 +184,12 @@ PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=CD_RST
 PB9.Locked=true
 PB9.Signal=GPIO_Output
+PC6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC6.GPIO_Label=CAM_RST
+PC6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PC6.GPIO_PuPd=GPIO_PULLUP
+PC6.Locked=true
+PC6.Signal=GPIO_Output
 PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=LED_G
 PD1.Locked=true
@@ -158,7 +232,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
@@ -194,6 +268,8 @@ RCC.USART1Freq_Value=64000000
 RCC.USART2Freq_Value=64000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
@@ -209,6 +285,4 @@ VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_SYS_V_VREFBUF.Mode=ExternalMode
-VP_SYS_V_VREFBUF.Signal=SYS_V_VREFBUF
 board=custom
