dmamux not work when src addr set to gpio or exti irq disabled

--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -4,7 +4,7 @@ Dma.DMA_GENERATOR0.2.EventEnable=DISABLE
 Dma.DMA_GENERATOR0.2.Instance=DMA1_Channel3
 Dma.DMA_GENERATOR0.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.DMA_GENERATOR0.2.MemInc=DMA_MINC_ENABLE
-Dma.DMA_GENERATOR0.2.Mode=DMA_NORMAL
+Dma.DMA_GENERATOR0.2.Mode=DMA_CIRCULAR
 Dma.DMA_GENERATOR0.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.DMA_GENERATOR0.2.PeriphInc=DMA_PINC_DISABLE
 Dma.DMA_GENERATOR0.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
@@ -107,9 +107,10 @@ Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
 MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
-NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 NVIC.DMA1_Channel1_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:1\:0\:true\:false\:true\:false\:true
+NVIC.EXTI0_1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.EXTI2_3_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
