--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -1,25 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.DMA_GENERATOR0.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.DMA_GENERATOR0.2.EventEnable=DISABLE
-Dma.DMA_GENERATOR0.2.Instance=DMA1_Channel3
-Dma.DMA_GENERATOR0.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.DMA_GENERATOR0.2.MemInc=DMA_MINC_ENABLE
-Dma.DMA_GENERATOR0.2.Mode=DMA_CIRCULAR
-Dma.DMA_GENERATOR0.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.DMA_GENERATOR0.2.PeriphInc=DMA_PINC_DISABLE
-Dma.DMA_GENERATOR0.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.DMA_GENERATOR0.2.Priority=DMA_PRIORITY_HIGH
-Dma.DMA_GENERATOR0.2.RequestNumber=1
-Dma.DMA_GENERATOR0.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.DMA_GENERATOR0.2.SignalID=HAL_DMAMUX1_REQ_GEN_EXTI0
-Dma.DMA_GENERATOR0.2.SyncEnable=DISABLE
-Dma.DMA_GENERATOR0.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.DMA_GENERATOR0.2.SyncRequestNumber=1
-Dma.DMA_GENERATOR0.2.SyncSignalID=NONE
 Dma.Request0=SPI1_RX
 Dma.Request1=SPI1_TX
-Dma.Request2=DMA_GENERATOR0
-Dma.RequestsNb=3
+Dma.RequestsNb=2
 Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.0.EventEnable=DISABLE
 Dma.SPI1_RX.0.Instance=DMA1_Channel1
@@ -73,45 +55,45 @@ Mcu.IP6=USART1
 Mcu.IPNb=7
 Mcu.Name=STM32G071C(6-8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PA0
-Mcu.Pin1=PA1
-Mcu.Pin10=PB2
-Mcu.Pin11=PB10
-Mcu.Pin12=PB11
-Mcu.Pin13=PA9
-Mcu.Pin14=PC6
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14-BOOT0
-Mcu.Pin17=PA15
-Mcu.Pin18=PD1
-Mcu.Pin19=PD2
-Mcu.Pin2=PA2
-Mcu.Pin20=PD3
-Mcu.Pin21=PB3
-Mcu.Pin22=PB4
-Mcu.Pin23=PB5
-Mcu.Pin24=PB6
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_SYS_VS_DBSignals
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
-Mcu.PinsNb=28
+Mcu.Pin0=PC13
+Mcu.Pin1=PA0
+Mcu.Pin10=PB1
+Mcu.Pin11=PB2
+Mcu.Pin12=PB10
+Mcu.Pin13=PB11
+Mcu.Pin14=PA9
+Mcu.Pin15=PC6
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14-BOOT0
+Mcu.Pin18=PA15
+Mcu.Pin19=PD1
+Mcu.Pin2=PA1
+Mcu.Pin20=PD2
+Mcu.Pin21=PD3
+Mcu.Pin22=PB3
+Mcu.Pin23=PB4
+Mcu.Pin24=PB5
+Mcu.Pin25=PB6
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_SYS_VS_DBSignals
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA4
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
 MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
-NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:1\:0\:true\:false\:true\:false\:true
-NVIC.DMA1_Channel1_IRQn=true\:1\:0\:true\:false\:true\:false\:true
-NVIC.DMA1_Channel2_3_IRQn=true\:1\:0\:true\:false\:true\:false\:true
+NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:false\:true
+NVIC.DMA1_Channel2_3_IRQn=true\:2\:0\:true\:false\:true\:false\:true
 NVIC.EXTI0_1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
-NVIC.EXTI2_3_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.EXTI2_3_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -185,6 +167,10 @@ PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=CD_RST
 PB9.Locked=true
 PB9.Signal=GPIO_Output
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=LED_CAM
+PC13.Locked=true
+PC13.Signal=GPIO_Output
 PC6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PC6.GPIO_Label=CAM_RST
 PC6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
