--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -205,7 +205,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -240,12 +240,12 @@ RCC.LPUART1Freq_Value=64000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=16000000
+RCC.MCO1PinFreq_Value=8000000
 RCC.PLLPoutputFreq_Value=64000000
 RCC.PLLQoutputFreq_Value=64000000
 RCC.PLLRCLKFreq_Value=64000000
 RCC.PWRFreq_Value=64000000
-RCC.RCC_MCODiv=RCC_MCODIV_4
+RCC.RCC_MCODiv=RCC_MCODIV_8
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIM15Freq_Value=64000000
