config test pin

--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -61,30 +61,32 @@ Mcu.Pin10=PB1
 Mcu.Pin11=PB2
 Mcu.Pin12=PB10
 Mcu.Pin13=PB11
-Mcu.Pin14=PA9
-Mcu.Pin15=PC6
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14-BOOT0
-Mcu.Pin18=PA15
-Mcu.Pin19=PD1
+Mcu.Pin14=PB12
+Mcu.Pin15=PB14
+Mcu.Pin16=PA9
+Mcu.Pin17=PC6
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14-BOOT0
 Mcu.Pin2=PA1
-Mcu.Pin20=PD2
-Mcu.Pin21=PD3
-Mcu.Pin22=PB3
-Mcu.Pin23=PB4
-Mcu.Pin24=PB5
-Mcu.Pin25=PB6
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_SYS_VS_DBSignals
+Mcu.Pin20=PA15
+Mcu.Pin21=PD1
+Mcu.Pin22=PD2
+Mcu.Pin23=PD3
+Mcu.Pin24=PB3
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB6
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PA2
+Mcu.Pin30=VP_SYS_VS_DBSignals
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=29
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
@@ -140,6 +142,16 @@ PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
+PB12.GPIOParameters=GPIO_Speed,GPIO_Label
+PB12.GPIO_Label=TEST
+PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Speed,GPIO_Label
+PB14.GPIO_Label=TEST2
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB14.Locked=true
+PB14.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=CAM_VSYNC
 PB2.Locked=true
