reduce systick priority; send cam data inside a small loop

--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -1,41 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=SPI1_RX
-Dma.Request1=SPI1_TX
-Dma.RequestsNb=2
-Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.0.EventEnable=DISABLE
-Dma.SPI1_RX.0.Instance=DMA1_Channel1
-Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.0.Mode=DMA_NORMAL
-Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_RX.0.RequestNumber=1
-Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_RX.0.SignalID=NONE
-Dma.SPI1_RX.0.SyncEnable=DISABLE
-Dma.SPI1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_RX.0.SyncRequestNumber=1
-Dma.SPI1_RX.0.SyncSignalID=NONE
-Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.1.EventEnable=DISABLE
-Dma.SPI1_TX.1.Instance=DMA1_Channel2
-Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.1.Mode=DMA_NORMAL
-Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_TX.1.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI1_TX.1.RequestNumber=1
-Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_TX.1.SignalID=NONE
-Dma.SPI1_TX.1.SyncEnable=DISABLE
-Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_TX.1.SyncRequestNumber=1
-Dma.SPI1_TX.1.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Fall_Time=0
@@ -45,14 +8,13 @@ I2C2.Speed=100
 I2C2.Timing=0x40F0323D
 KeepUserPlacement=false
 Mcu.Family=STM32G0
-Mcu.IP0=DMA
-Mcu.IP1=I2C2
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP0=I2C2
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32G071C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -92,15 +54,12 @@ Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
 MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
-NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:false\:true
-NVIC.DMA1_Channel2_3_IRQn=true\:2\:0\:true\:false\:true\:false\:true
-NVIC.EXTI2_3_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:true\:false\:true\:false\:false
+NVIC.SVC_IRQn=true\:0\:0\:true\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:2\:0\:true\:false\:true\:false\:true
 PA0.Locked=true
 PA0.Signal=GPIO_Input
 PA1.Locked=true
@@ -196,12 +155,10 @@ PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=LED_R
 PD2.Locked=true
 PD2.Signal=GPIO_Output
-PD3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PD3.GPIOParameters=GPIO_Label
 PD3.GPIO_Label=CD_INT
-PD3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PD3.GPIO_PuPd=GPIO_PULLUP
 PD3.Locked=true
-PD3.Signal=GPXTI3
+PD3.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -230,7 +187,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
@@ -268,8 +225,6 @@ RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
-SH.GPXTI3.0=GPIO_EXTI3
-SH.GPXTI3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
