--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -1,4 +1,23 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=SPI1_TX
+Dma.RequestsNb=1
+Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.0.EventEnable=DISABLE
+Dma.SPI1_TX.0.Instance=DMA1_Channel1
+Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.0.Mode=DMA_NORMAL
+Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI1_TX.0.RequestNumber=1
+Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.0.SignalID=NONE
+Dma.SPI1_TX.0.SyncEnable=DISABLE
+Dma.SPI1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.0.SyncRequestNumber=1
+Dma.SPI1_TX.0.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Fall_Time=0
@@ -8,13 +27,14 @@ I2C2.Speed=100
 I2C2.Timing=0x40F0323D
 KeepUserPlacement=false
 Mcu.Family=STM32G0
-Mcu.IP0=I2C2
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP0=DMA
+Mcu.IP1=I2C2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32G071C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -54,7 +74,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
 MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
-NVIC.ForceEnableDMAVector=true
+NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:true\:false\:true\:false\:false
@@ -187,7 +207,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
