update to hw v1.2

--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=SPI1_TX
-Dma.RequestsNb=1
+Dma.Request1=SPI2_TX
+Dma.RequestsNb=2
 Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI1_TX.0.EventEnable=DISABLE
 Dma.SPI1_TX.0.Instance=DMA1_Channel1
@@ -18,6 +19,23 @@ Dma.SPI1_TX.0.SyncEnable=DISABLE
 Dma.SPI1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI1_TX.0.SyncRequestNumber=1
 Dma.SPI1_TX.0.SyncSignalID=NONE
+Dma.SPI2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.1.EventEnable=DISABLE
+Dma.SPI2_TX.1.Instance=DMA1_Channel2
+Dma.SPI2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.1.Mode=DMA_NORMAL
+Dma.SPI2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_TX.1.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI2_TX.1.RequestNumber=1
+Dma.SPI2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_TX.1.SignalID=NONE
+Dma.SPI2_TX.1.SyncEnable=DISABLE
+Dma.SPI2_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_TX.1.SyncRequestNumber=1
+Dma.SPI2_TX.1.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Fall_Time=0
@@ -32,9 +50,10 @@ Mcu.IP1=I2C2
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP5=SPI2
+Mcu.IP6=SYS
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32G071C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -44,31 +63,35 @@ Mcu.Pin11=PB2
 Mcu.Pin12=PB10
 Mcu.Pin13=PB11
 Mcu.Pin14=PB12
-Mcu.Pin15=PB14
-Mcu.Pin16=PA9
-Mcu.Pin17=PC6
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14-BOOT0
+Mcu.Pin15=PB13
+Mcu.Pin16=PB14
+Mcu.Pin17=PB15
+Mcu.Pin18=PA8
+Mcu.Pin19=PA9
 Mcu.Pin2=PA1
-Mcu.Pin20=PA15
-Mcu.Pin21=PD1
-Mcu.Pin22=PD2
-Mcu.Pin23=PD3
-Mcu.Pin24=PB3
-Mcu.Pin25=PB4
-Mcu.Pin26=PB5
-Mcu.Pin27=PB6
-Mcu.Pin28=PB9
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin20=PC6
+Mcu.Pin21=PC7
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14-BOOT0
+Mcu.Pin24=PA15
+Mcu.Pin25=PD1
+Mcu.Pin26=PD2
+Mcu.Pin27=PD3
+Mcu.Pin28=PB3
+Mcu.Pin29=PB4
 Mcu.Pin3=PA2
-Mcu.Pin30=VP_SYS_VS_DBSignals
+Mcu.Pin30=PB5
+Mcu.Pin31=PB6
+Mcu.Pin32=PB9
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_SYS_VS_DBSignals
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=31
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
@@ -106,6 +129,12 @@ PA6.Locked=true
 PA6.Signal=GPIO_Input
 PA7.Locked=true
 PA7.Signal=GPIO_Input
+PA8.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA8.GPIO_Label=SEN_CS
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA8.Locked=true
+PA8.PinState=GPIO_PIN_SET
+PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Speed
 PA9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA9.Locked=true
@@ -121,16 +150,17 @@ PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
-PB12.GPIOParameters=GPIO_Speed,GPIO_Label
-PB12.GPIO_Label=TEST
-PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB12.GPIO_Label=SEN_INT
+PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.Locked=true
-PB12.Signal=GPIO_Output
-PB14.GPIOParameters=GPIO_Speed,GPIO_Label
-PB14.GPIO_Label=TEST2
-PB14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB14.Locked=true
-PB14.Signal=GPIO_Output
+PB12.Signal=GPIO_Input
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=CAM_VSYNC
 PB2.Locked=true
@@ -167,6 +197,12 @@ PC6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PC6.GPIO_PuPd=GPIO_PULLUP
 PC6.Locked=true
 PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PC7.GPIO_Label=SRAM_CS
+PC7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PC7.Locked=true
+PC7.PinState=GPIO_PIN_SET
+PC7.Signal=GPIO_Output
 PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=LED_G
 PD1.Locked=true
@@ -175,8 +211,9 @@ PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=LED_R
 PD2.Locked=true
 PD2.Signal=GPIO_Output
-PD3.GPIOParameters=GPIO_Label
+PD3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD3.GPIO_Label=CD_INT
+PD3.GPIO_PuPd=GPIO_PULLUP
 PD3.Locked=true
 PD3.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
@@ -207,7 +244,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
@@ -253,6 +290,13 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI2.CalculateBaudRate=16.0 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode-Half_duplex(single_wire_mode)
 USART1.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
