update cube config to hw 2.0

--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -4,7 +4,26 @@ CAD.pinconfig=
 CAD.provider=
 Dma.Request0=SPI1_TX
 Dma.Request1=SPI2_TX
-Dma.RequestsNb=2
+Dma.Request2=SPI1_RX
+Dma.Request3=SPI2_RX
+Dma.RequestsNb=4
+Dma.SPI1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.2.EventEnable=DISABLE
+Dma.SPI1_RX.2.Instance=DMA1_Channel3
+Dma.SPI1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.2.Mode=DMA_NORMAL
+Dma.SPI1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.2.RequestNumber=1
+Dma.SPI1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.2.SignalID=NONE
+Dma.SPI1_RX.2.SyncEnable=DISABLE
+Dma.SPI1_RX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.2.SyncRequestNumber=1
+Dma.SPI1_RX.2.SyncSignalID=NONE
 Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI1_TX.0.EventEnable=DISABLE
 Dma.SPI1_TX.0.Instance=DMA1_Channel1
@@ -22,6 +41,23 @@ Dma.SPI1_TX.0.SyncEnable=DISABLE
 Dma.SPI1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI1_TX.0.SyncRequestNumber=1
 Dma.SPI1_TX.0.SyncSignalID=NONE
+Dma.SPI2_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.3.EventEnable=DISABLE
+Dma.SPI2_RX.3.Instance=DMA1_Channel4
+Dma.SPI2_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.3.Mode=DMA_NORMAL
+Dma.SPI2_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.3.RequestNumber=1
+Dma.SPI2_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_RX.3.SignalID=NONE
+Dma.SPI2_RX.3.SyncEnable=DISABLE
+Dma.SPI2_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_RX.3.SyncRequestNumber=1
+Dma.SPI2_RX.3.SyncSignalID=NONE
 Dma.SPI2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI2_TX.1.EventEnable=DISABLE
 Dma.SPI2_TX.1.Instance=DMA1_Channel2
@@ -61,56 +97,56 @@ Mcu.IPNb=8
 Mcu.Name=STM32G071C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
-Mcu.Pin1=PA0
-Mcu.Pin10=PB1
-Mcu.Pin11=PB2
-Mcu.Pin12=PB10
-Mcu.Pin13=PB11
-Mcu.Pin14=PB12
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
-Mcu.Pin2=PA1
-Mcu.Pin20=PC6
-Mcu.Pin21=PC7
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14-BOOT0
-Mcu.Pin24=PA15
-Mcu.Pin25=PD1
-Mcu.Pin26=PD2
-Mcu.Pin27=PD3
-Mcu.Pin28=PB3
-Mcu.Pin29=PB4
-Mcu.Pin3=PA2
-Mcu.Pin30=PB5
-Mcu.Pin31=PB6
-Mcu.Pin32=PB9
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_SYS_VS_DBSignals
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
-Mcu.PinsNb=35
+Mcu.Pin1=PB10
+Mcu.Pin10=PA12 [PA10]
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14-BOOT0
+Mcu.Pin13=PA15
+Mcu.Pin14=PD1
+Mcu.Pin15=PD2
+Mcu.Pin16=PD3
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB5
+Mcu.Pin2=PB11
+Mcu.Pin20=PB6
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_SYS_VS_DBSignals
+Mcu.Pin3=PB12
+Mcu.Pin4=PB13
+Mcu.Pin5=PB14
+Mcu.Pin6=PB15
+Mcu.Pin7=PA8
+Mcu.Pin8=PA9
+Mcu.Pin9=PA11 [PA9]
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
 MxCube.Version=6.8.0
 MxDb.Version=DB.6.0.80
-NVIC.ForceEnableDMAVector=false
+NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.DMA1_Channel2_3_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI2_3_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI4_15_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:false
-NVIC.SVC_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true
+NVIC.PendSV_IRQn=true\:2\:0\:true\:false\:true\:false\:false\:false
+NVIC.SVC_IRQn=true\:2\:0\:true\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:false
-PA0.Locked=true
-PA0.Signal=GPIO_Input
-PA1.Locked=true
-PA1.Signal=GPIO_Input
+PA11\ [PA9].GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA11\ [PA9].GPIO_Label=PGA_INT
+PA11\ [PA9].GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA11\ [PA9].GPIO_PuPd=GPIO_PULLUP
+PA11\ [PA9].Locked=true
+PA11\ [PA9].Signal=GPXTI11
+PA12\ [PA10].GPIOParameters=GPIO_Label
+PA12\ [PA10].GPIO_Label=PGA_RST
+PA12\ [PA10].Locked=true
+PA12\ [PA10].Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14-BOOT0.Mode=Serial_Wire
@@ -121,20 +157,8 @@ PA15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA15.Locked=true
 PA15.PinState=GPIO_PIN_SET
 PA15.Signal=GPIO_Output
-PA2.Locked=true
-PA2.Signal=GPIO_Input
-PA3.Locked=true
-PA3.Signal=GPIO_Input
-PA4.Locked=true
-PA4.Signal=GPIO_Input
-PA5.Locked=true
-PA5.Signal=GPIO_Input
-PA6.Locked=true
-PA6.Signal=GPIO_Input
-PA7.Locked=true
-PA7.Signal=GPIO_Input
 PA8.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PA8.GPIO_Label=SEN_CS
+PA8.GPIO_Label=PGA_CS
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA8.Locked=true
 PA8.PinState=GPIO_PIN_SET
@@ -144,12 +168,6 @@ PA9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA9.Locked=true
 PA9.Mode=Clock-out
 PA9.Signal=RCC_MCO
-PB0.Locked=true
-PB0.Signal=GPXTI0
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=CAM_HREF
-PB1.Locked=true
-PB1.Signal=GPIO_Input
 PB10.GPIOParameters=GPIO_Pu
 PB10.GPIO_Pu=GPIO_PULLUP
 PB10.Mode=I2C
@@ -158,21 +176,25 @@ PB11.GPIOParameters=GPIO_Pu
 PB11.GPIO_Pu=GPIO_PULLUP
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
-PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB12.GPIO_Label=SEN_INT
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB12.GPIO_Label=CAM_RST
+PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.Locked=true
-PB12.Signal=GPIO_Input
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Speed,PinState
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB13.Mode=Full_Duplex_Master
+PB13.PinState=GPIO_PIN_RESET
 PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_Speed
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
+PB15.GPIOParameters=GPIO_Speed
+PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
-PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=CAM_VSYNC
-PB2.Locked=true
-PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Speed
 PB3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB3.Locked=true
@@ -199,18 +221,6 @@ PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=LED_CAM
 PC13.Locked=true
 PC13.Signal=GPIO_Output
-PC6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PC6.GPIO_Label=CAM_RST
-PC6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PC6.GPIO_PuPd=GPIO_PULLUP
-PC6.Locked=true
-PC6.Signal=GPIO_Output
-PC7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PC7.GPIO_Label=SRAM_CS
-PC7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PC7.Locked=true
-PC7.PinState=GPIO_PIN_SET
-PC7.Signal=GPIO_Output
 PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=LED_G
 PD1.Locked=true
@@ -219,11 +229,12 @@ PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=LED_R
 PD2.Locked=true
 PD2.Signal=GPIO_Output
-PD3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PD3.GPIO_Label=CD_INT
+PD3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PD3.GPIO_PuPd=GPIO_PULLUP
 PD3.Locked=true
-PD3.Signal=GPIO_Input
+PD3.Signal=GPXTI3
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -275,13 +286,13 @@ RCC.LPUART1Freq_Value=64000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=8000000
+RCC.MCO1PinFreq_Value=16000000
 RCC.PLLPoutputFreq_Value=64000000
 RCC.PLLQoutputFreq_Value=64000000
 RCC.PLLRCLKFreq_Value=64000000
 RCC.PWRFreq_Value=64000000
 RCC.RCC_MCO1Source=RCC_MCO1SOURCE_PLLCLK
-RCC.RCC_MCODiv=RCC_MCODIV_8
+RCC.RCC_MCODiv=RCC_MCODIV_4
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIM15Freq_Value=64000000
@@ -290,8 +301,10 @@ RCC.USART1Freq_Value=64000000
 RCC.USART2Freq_Value=64000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
