--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -110,9 +110,8 @@ Mcu.Pin18=PB4
 Mcu.Pin19=PB5
 Mcu.Pin2=PB11
 Mcu.Pin20=PB6
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_SYS_VS_DBSignals
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_SYS_VS_DBSignals
 Mcu.Pin3=PB12
 Mcu.Pin4=PB13
 Mcu.Pin5=PB14
@@ -120,12 +119,12 @@ Mcu.Pin6=PB15
 Mcu.Pin7=PA8
 Mcu.Pin8=PA9
 Mcu.Pin9=PA11 [PA9]
-Mcu.PinsNb=24
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
-MxCube.Version=6.8.0
-MxDb.Version=DB.6.0.80
+MxCube.Version=6.9.2
+MxDb.Version=DB.6.0.92
 NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
@@ -164,7 +163,7 @@ PA8.Locked=true
 PA8.PinState=GPIO_PIN_SET
 PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Speed
-PA9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA9.Locked=true
 PA9.Mode=Clock-out
 PA9.Signal=RCC_MCO
@@ -213,10 +212,6 @@ PB5.Signal=SPI1_MOSI
 PB6.Locked=true
 PB6.Mode=Half_duplex(single_wire_mode)
 PB6.Signal=USART1_TX
-PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=CD_RST
-PB9.Locked=true
-PB9.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=LED_CAM
 PC13.Locked=true
@@ -263,6 +258,8 @@ ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.ADCFreq_Value=64000000
