update by stm32cube

--- a/cam_bl/cam_bl.ioc
+++ b/cam_bl/cam_bl.ioc
@@ -17,8 +17,7 @@ Mcu.Name=STM32G071C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA13
 Mcu.Pin1=PA14-BOOT0
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_SYS_VS_DBSignals
+Mcu.Pin10=VP_SYS_VS_DBSignals
 Mcu.Pin2=PA15
 Mcu.Pin3=PD1
 Mcu.Pin4=PD2
@@ -26,13 +25,13 @@ Mcu.Pin5=PB3
 Mcu.Pin6=PB4
 Mcu.Pin7=PB5
 Mcu.Pin8=PB6
-Mcu.Pin9=PB9
-Mcu.PinsNb=12
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
-MxCube.Version=6.8.0
-MxDb.Version=DB.6.0.80
+MxCube.Version=6.12.0
+MxDb.Version=DB.6.0.120
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -85,7 +84,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32G071CBTx
-ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.6.1
+ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.6.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -103,6 +102,8 @@ ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreq_Value=64000000
