--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -86,21 +86,20 @@ Mcu.Pin29=PB4
 Mcu.Pin3=PA2
 Mcu.Pin30=PB5
 Mcu.Pin31=PB6
-Mcu.Pin32=PB9
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_SYS_VS_DBSignals
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_SYS_VS_DBSignals
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=35
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
-MxCube.Version=6.8.0
-MxDb.Version=DB.6.0.80
+MxCube.Version=6.12.0
+MxDb.Version=DB.6.0.120
 NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -230,7 +229,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32G071CBTx
-ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.6.1
+ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.6.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -248,6 +247,8 @@ ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.ADCFreq_Value=64000000
