--- a/cam_bl/cam_bl.ioc
+++ b/cam_bl/cam_bl.ioc
@@ -17,8 +17,9 @@ Mcu.Name=STM32G071C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA9
 Mcu.Pin1=PA13
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_SYS_VS_DBSignals
+Mcu.Pin10=PB9
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_SYS_VS_DBSignals
 Mcu.Pin2=PA14-BOOT0
 Mcu.Pin3=PA15
 Mcu.Pin4=PD1
@@ -27,7 +28,7 @@ Mcu.Pin6=PB3
 Mcu.Pin7=PB4
 Mcu.Pin8=PB5
 Mcu.Pin9=PB6
-Mcu.PinsNb=12
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
@@ -72,6 +73,13 @@ PB5.Signal=SPI1_MOSI
 PB6.Locked=true
 PB6.Mode=Half_duplex(single_wire_mode)
 PB6.Signal=USART1_TX
+PB9.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB9.GPIO_Label=OLD_CD_RST
+PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB9.GPIO_PuPd=GPIO_NOPULL
+PB9.Locked=true
+PB9.PinState=GPIO_PIN_SET
+PB9.Signal=GPIO_Output
 PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=LED_G
 PD1.Locked=true
