lower i2c freq for stable sensor init

--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -77,11 +77,11 @@ Dma.SPI2_TX.1.SyncRequestNumber=1
 Dma.SPI2_TX.1.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C2.I2C_Fall_Time=0
+I2C2.I2C_Fall_Time=300
 I2C2.I2C_Rise_Time=1000
 I2C2.IPParameters=Timing,I2C_Rise_Time,Speed,I2C_Fall_Time
-I2C2.Speed=100
-I2C2.Timing=0x40F0323D
+I2C2.Speed=20
+I2C2.Timing=0xC0613BB2
 KeepUserPlacement=false
 Mcu.CPN=STM32G071CBT3
 Mcu.Family=STM32G0
@@ -123,8 +123,8 @@ Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
-MxCube.Version=6.12.0
-MxDb.Version=DB.6.0.120
+MxCube.Version=6.13.0
+MxDb.Version=DB.6.0.130
 NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
