update cdnet, improve efficiency

--- a/cam_bl/cam_bl.ioc
+++ b/cam_bl/cam_bl.ioc
@@ -70,6 +70,9 @@ PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
+PB6.GPIOParameters=GPIO_Speed,GPIO_ModeDefaultOD
+PB6.GPIO_ModeDefaultOD=GPIO_MODE_AF_PP
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB6.Locked=true
 PB6.Mode=Half_duplex(single_wire_mode)
 PB6.Signal=USART1_TX
@@ -165,7 +168,8 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-USART1.IPParameters=VirtualMode-Half_duplex(single_wire_mode)
+USART1.BaudRate=2000000
+USART1.IPParameters=VirtualMode-Half_duplex(single_wire_mode),BaudRate
 USART1.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
