--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -9,14 +9,14 @@ Dma.Request3=SPI2_RX
 Dma.RequestsNb=4
 Dma.SPI1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.2.EventEnable=DISABLE
-Dma.SPI1_RX.2.Instance=DMA1_Channel3
+Dma.SPI1_RX.2.Instance=DMA1_Channel1
 Dma.SPI1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI1_RX.2.MemInc=DMA_MINC_ENABLE
 Dma.SPI1_RX.2.Mode=DMA_NORMAL
 Dma.SPI1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_RX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_RX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.2.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI1_RX.2.RequestNumber=1
 Dma.SPI1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.SPI1_RX.2.SignalID=NONE
@@ -26,7 +26,7 @@ Dma.SPI1_RX.2.SyncRequestNumber=1
 Dma.SPI1_RX.2.SyncSignalID=NONE
 Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI1_TX.0.EventEnable=DISABLE
-Dma.SPI1_TX.0.Instance=DMA1_Channel1
+Dma.SPI1_TX.0.Instance=DMA1_Channel2
 Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
 Dma.SPI1_TX.0.Mode=DMA_NORMAL
@@ -43,14 +43,14 @@ Dma.SPI1_TX.0.SyncRequestNumber=1
 Dma.SPI1_TX.0.SyncSignalID=NONE
 Dma.SPI2_RX.3.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.3.EventEnable=DISABLE
-Dma.SPI2_RX.3.Instance=DMA1_Channel4
+Dma.SPI2_RX.3.Instance=DMA1_Channel3
 Dma.SPI2_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI2_RX.3.MemInc=DMA_MINC_ENABLE
 Dma.SPI2_RX.3.Mode=DMA_NORMAL
 Dma.SPI2_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_RX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI2_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.3.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI2_RX.3.RequestNumber=1
 Dma.SPI2_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.SPI2_RX.3.SignalID=NONE
@@ -60,7 +60,7 @@ Dma.SPI2_RX.3.SyncRequestNumber=1
 Dma.SPI2_RX.3.SyncSignalID=NONE
 Dma.SPI2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI2_TX.1.EventEnable=DISABLE
-Dma.SPI2_TX.1.Instance=DMA1_Channel2
+Dma.SPI2_TX.1.Instance=DMA1_Channel4
 Dma.SPI2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI2_TX.1.MemInc=DMA_MINC_ENABLE
 Dma.SPI2_TX.1.Mode=DMA_NORMAL
@@ -125,12 +125,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32G071CBTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
-NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
-NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
-NVIC.DMA1_Channel2_3_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
-NVIC.EXTI2_3_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
-NVIC.EXTI4_15_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
-NVIC.ForceEnableDMAVector=true
+NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:2\:0\:true\:false\:true\:false\:false\:false
@@ -209,6 +204,9 @@ PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
+PB6.GPIOParameters=GPIO_Speed,GPIO_ModeDefaultOD
+PB6.GPIO_ModeDefaultOD=GPIO_MODE_AF_PP
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB6.Locked=true
 PB6.Mode=Half_duplex(single_wire_mode)
 PB6.Signal=USART1_TX
@@ -316,7 +314,9 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-USART1.IPParameters=VirtualMode-Half_duplex(single_wire_mode)
+USART1.BaudRate=2000000
+USART1.FIFOMode=FIFOMODE_ENABLE
+USART1.IPParameters=VirtualMode-Half_duplex(single_wire_mode),FIFOMode,BaudRate
 USART1.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
