--- a/cam_fw/cam_fw.ioc
+++ b/cam_fw/cam_fw.ioc
@@ -4,10 +4,29 @@ CAD.pinconfig=
 CAD.provider=
 Dma.Request0=SPI1_TX
 Dma.Request1=SPI2_TX
-Dma.RequestsNb=2
+Dma.Request2=SPI1_RX
+Dma.Request3=SPI2_RX
+Dma.RequestsNb=4
+Dma.SPI1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.2.EventEnable=DISABLE
+Dma.SPI1_RX.2.Instance=DMA1_Channel1
+Dma.SPI1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.2.Mode=DMA_NORMAL
+Dma.SPI1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.2.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI1_RX.2.RequestNumber=1
+Dma.SPI1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.2.SignalID=NONE
+Dma.SPI1_RX.2.SyncEnable=DISABLE
+Dma.SPI1_RX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.2.SyncRequestNumber=1
+Dma.SPI1_RX.2.SyncSignalID=NONE
 Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI1_TX.0.EventEnable=DISABLE
-Dma.SPI1_TX.0.Instance=DMA1_Channel1
+Dma.SPI1_TX.0.Instance=DMA1_Channel2
 Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
 Dma.SPI1_TX.0.Mode=DMA_NORMAL
@@ -22,16 +41,33 @@ Dma.SPI1_TX.0.SyncEnable=DISABLE
 Dma.SPI1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI1_TX.0.SyncRequestNumber=1
 Dma.SPI1_TX.0.SyncSignalID=NONE
+Dma.SPI2_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.3.EventEnable=DISABLE
+Dma.SPI2_RX.3.Instance=DMA1_Channel3
+Dma.SPI2_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.3.Mode=DMA_NORMAL
+Dma.SPI2_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.3.RequestNumber=1
+Dma.SPI2_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_RX.3.SignalID=NONE
+Dma.SPI2_RX.3.SyncEnable=DISABLE
+Dma.SPI2_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_RX.3.SyncRequestNumber=1
+Dma.SPI2_RX.3.SyncSignalID=NONE
 Dma.SPI2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI2_TX.1.EventEnable=DISABLE
-Dma.SPI2_TX.1.Instance=DMA1_Channel2
+Dma.SPI2_TX.1.Instance=DMA1_Channel4
 Dma.SPI2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI2_TX.1.MemInc=DMA_MINC_ENABLE
 Dma.SPI2_TX.1.Mode=DMA_NORMAL
 Dma.SPI2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI2_TX.1.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI2_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.SPI2_TX.1.RequestNumber=1
 Dma.SPI2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.SPI2_TX.1.SignalID=NONE
@@ -187,6 +223,9 @@ PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
+PB6.GPIOParameters=GPIO_Speed,GPIO_ModeDefaultOD
+PB6.GPIO_ModeDefaultOD=GPIO_MODE_AF_PP
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB6.Locked=true
 PB6.Mode=Half_duplex(single_wire_mode)
 PB6.Signal=USART1_TX
@@ -303,7 +342,8 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-USART1.IPParameters=VirtualMode-Half_duplex(single_wire_mode)
+USART1.BaudRate=2000000
+USART1.IPParameters=VirtualMode-Half_duplex(single_wire_mode),BaudRate
 USART1.VirtualMode-Half_duplex(single_wire_mode)=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
